AI interview versions 1.3 修改前端输入数量，将所有选项框为可选。 后端根据： 1. 输入关键词 2. 简历关键词 & 岗位需求关键词 3. 简历关键词 - 岗位需求关键词 4. 岗位需求关键词-  简历关键词 的方式判断优先级进行提问

--- a/frontend/index_old.html
+++ b/frontend/index_old.html
@@ -1107,7 +1107,7 @@
                 report.questions.forEach((item, index) => {
                     reportHTML += `
                         <div class="report-item">
-                            <div class="report-question">${index + 1}. ${item.question}</div>
+                            <div class="report-question">${index_old + 1}. ${item.question}</div>
                             <div class="report-answer"><strong>您的回答:</strong> ${item.user_answer}</div>
                             <div class="report-feedback">
                                 <div class="feedback-title">AI评估与建议:</div>
